# ai-chatbot-core

./: .gitignore  README.md  history.json  main.ipynb  main.py  pyproject.toml
app/: chatbot.py
demo/: retrieval.py
