[tool.poetry]
name = "ai-chatbot-core"
version = "0.1.0"
description = "Conversational AI application with GPT-3.5-turbo and LangChain. Saves conversation history and uses it to set context."
authors = ["Hikmat Samadov <s3m3dov@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.165"
openai = "^0.27.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
